convert fantrax-pl-manager to statefulset w/pvc

--- a/k8s/apps/fantrax-pl-team-manager/kustomization.yaml
+++ b/k8s/apps/fantrax-pl-team-manager/kustomization.yaml
@@ -6,7 +6,7 @@ labels:
     app: fantrax-pl-team-manager
 
 resources:
-- deploy.yaml
+- statefulset.yaml
 - sealed-fantrax-cookie.yaml
 - sealed-odds-api-key.yaml
 
