fix2: enable data-persistence for fantrax-pl-manager

--- a/k8s/apps/fantrax-pl-team-manager/statefulset.yaml
+++ b/k8s/apps/fantrax-pl-team-manager/statefulset.yaml
@@ -20,9 +20,8 @@ spec:
       - image: zach17/fantrax-pl-team-manager:placeholder
         command:
         - python
-        args:
         - -m
-        - fanstax_pl_team_manager
+        - fantrax_pl_team_manager
         - --persist-odds-data
         name: fantrax-pl-team-manager
         imagePullPolicy: IfNotPresent
